# oai5g

./: .gitignore  CHANGELOG.md  Dockerfile.ubuntu.18.04  README.md
ci-scripts/: Jenkinsfile-Bracket-Test  Jenkinsfile-GitLab-Docker  flatten_image.py  generateHtmlReport.py  toCheckDSTesterResult.py
ci-scripts/docker/: Dockerfile.ci.ubuntu.18.04
docker/: Dockerfile.amf.rhel8  Dockerfile.amf.rhel8.2  Dockerfile.amf.ubuntu18  Dockerfile.ubuntu.18.04
docs/: FEATURE_SET.md
etc/: amf.conf  amf_dsTest.conf  amf_eur.conf
scripts/: entrypoint.sh
src/: .clang-format
src/amf-app/: CMakeLists.txt  amf_app.cpp  amf_app.hpp  amf_config.cpp  amf_config.hpp  amf_event.cpp  amf_event.hpp  amf_event_sig.hpp  amf_module_from_config.cpp  amf_module_from_config.hpp  amf_msg.cpp  amf_msg.hpp  amf_n1.cpp  amf_n1.hpp  amf_n11.cpp  amf_n11.hpp  amf_n2.cpp  amf_n2.hpp  amf_profile.cpp  amf_profile.hpp  amf_statistics.cpp  amf_statistics.hpp  amf_subscription.cpp  amf_subscription.hpp  mysql_db.cpp  mysql_db.hpp
src/common/: 3gpp_23.003.h  3gpp_24.501.h  3gpp_29.502.h  3gpp_29.508.h  3gpp_29.510.h  3gpp_29.518.h  3gpp_29.531.h  CMakeLists.txt  amf.hpp  comUt.hpp  common_root_types.h  conversions.cpp  conversions.hpp  endpoint.hpp  logger.cpp  logger.hpp
src/contexts/: CMakeLists.txt  gNB_context.cpp  gNB_context.hpp  nas_context.cpp  nas_context.hpp  nas_security_context.hpp  pdu_session_context.cpp  pdu_session_context.hpp  security_def.hpp  ue_context.cpp  ue_context.hpp  ue_ngap_context.hpp
src/sbi/amf_server/: AMFApiServer.cpp  AMFApiServer.hpp  CMakeLists.txt  amf-http2-server.cpp
src/sbi/amf_server/api/: AMFConfigurationApi.cpp  AMFConfigurationApi.h  IndividualSubscriptionDocumentApi.cpp  IndividualSubscriptionDocumentApi.h  IndividualSubscriptionDocumentApiEventExposure.cpp  IndividualSubscriptionDocumentApiEventExposure.h  IndividualUeContextDocumentApi.cpp  IndividualUeContextDocumentApi.h  N1MessageNotifyApi.cpp  N1MessageNotifyApi.h  N1N2IndividualSubscriptionDocumentApi.cpp  N1N2IndividualSubscriptionDocumentApi.h  N1N2MessageCollectionDocumentApi.cpp  N1N2MessageCollectionDocumentApi.h  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.h  NFStatusNotifyApi.cpp  NFStatusNotifyApi.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.cpp  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.h  NonUEN2MessagesCollectionDocumentApi.cpp  NonUEN2MessagesCollectionDocumentApi.h  NonUEN2MessagesSubscriptionsCollectionDocumentApi.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApi.h  SubscriptionsCollectionApi.cpp  SubscriptionsCollectionApi.h  SubscriptionsCollectionDocumentApi.cpp  SubscriptionsCollectionDocumentApi.h  SubscriptionsCollectionDocumentApiEventExposure.cpp  SubscriptionsCollectionDocumentApiEventExposure.h
src/sbi/amf_server/impl/: AMFConfigurationApiImpl.cpp  AMFConfigurationApiImpl.h  IndividualSubscriptionDocumentApiImpl.cpp  IndividualSubscriptionDocumentApiImpl.h  IndividualSubscriptionDocumentApiImplEventExposure.cpp  IndividualUeContextDocumentApiImpl.cpp  IndividualUeContextDocumentApiImpl.h  N1MessageNotifyApiImpl.cpp  N1MessageNotifyApiImpl.h  N1N2IndividualSubscriptionDocumentApiImpl.cpp  N1N2IndividualSubscriptionDocumentApiImpl.h  N1N2MessageCollectionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.h  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApiImpl.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApiImpl.h  NFStatusNotifyApiImpl.cpp  NFStatusNotifyApiImpl.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentApiImpl.cpp  NonUEN2MessageNotificationIndividualSubscriptionDocumentApiImpl.h  NonUEN2MessagesCollectionDocumentApiImpl.cpp  NonUEN2MessagesCollectionDocumentApiImpl.h  NonUEN2MessagesSubscriptionsCollectionDocumentApiImpl.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApiImpl.h  SubscriptionsCollectionApiImpl.cpp  SubscriptionsCollectionApiImpl.h  SubscriptionsCollectionDocumentApiImpl.cpp  SubscriptionsCollectionDocumentApiImpl.h  SubscriptionsCollectionDocumentApiImplEventExposure.cpp  SubscriptionsCollectionDocumentApiImplEventExposure.h
src/sbi/amf_server/model/: 5GsUserState.cpp  5GsUserStateInfo.cpp  AccessTokenErr.cpp  AccessTokenReq.cpp  AccessType.cpp  AmfCreateEventSubscription.cpp  AmfCreatedEventSubscription.cpp  AmfEvent.cpp  AmfEventArea.cpp  AmfEventMode.cpp  AmfEventNotification.cpp  AmfEventReport.cpp  AmfEventState.cpp  AmfEventSubscription.cpp  AmfEventTrigger.cpp  AmfEventTrigger_anyOf.cpp  AmfEventType.cpp  AmfEventType.h  AmfEventType_anyOf.cpp  AmfUpdateEventOptionItem.cpp  AmfUpdatedEventSubscription.cpp  AtsssCapability.cpp  AtsssCapability.h  AuthenticationInfo.cpp  AuthenticationInfo.h  Av5gAka.h  ChangeItem.cpp  ChangeItem.h  ChangeType.cpp  ChangeType.h  CmInfo.cpp  CmState.cpp  CmState.h  CmState_anyOf.cpp  CommunicationFailure.cpp  ConfirmationData.h  ConfirmationDataResponse.cpp  ConfirmationDataResponse.h  DddStatus.cpp  DddStatus.h  (+81 more)
src/sbi/smf_client/: CMakeLists.txt  SMFClientApi.cpp  SMFClientApi.hpp  smf-client.hpp
src/sbi/smf_client/api/: SMContextsCollectionApi.cpp
src/sbi/smf_client/inputs/: SmContextCreateData.json
src/sbi/smf_client/model/: AccessType.cpp  SmContextCreateData.cpp  SmContextMessage.cpp  SmContextMessage.h
src/sctp/: CMakeLists.txt  sctp_server.cpp  sctp_server.hpp
src/secu_algorithms/5gaka/: CMakeLists.txt  authentication_algorithms_with_5gaka.cpp  authentication_algorithms_with_5gaka.hpp  rijndael.cpp  sha256.cpp  sha256.hpp
src/secu_algorithms/5gaka/algorithm_from_spec/: f12345.h
src/secu_algorithms/5gaka/test/: test.hpp
src/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  String2Value.hpp  backtrace.c  conversions.c  conversions.h  conversions.hpp  dynamic_memory_check.c  dynamic_memory_check.h  hex_string_convert.cpp  http_multi_parser.cpp  if.cpp  if.hpp  mime_parser.cpp  mime_parser.hpp  string.cpp  string.hpp  thread_sched.cpp  thread_sched.hpp
src/utils/bstr/: bstrlib.c  bstrlib.h
(+576 files in other folders)
